# fractal-image-comp-rs

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
fractal-images/: Cargo.toml
fractal-images/examples/: circle.rs  circle_error_compressions.rs
fractal-images/examples/errors/: circle.rs  ex_module.rs  square.rs
fractal-images/src/: compress.rs  decompress.rs  image.rs  lib.rs  metrics.rs  model.rs  persistence.rs  preprocessing.rs  testutils.rs
fractal-images/src/compress/: quadtree.rs
fractal-images/src/image/: block.rs  circle.rs  downscale.rs  fake.rs  gen.rs  owned.rs  power_of_two.rs  rotate.rs  square.rs
fractal-images/src/model/: block.rs  compressed.rs  rotation.rs  transformation.rs
fractal-images/src/persistence/: binary_v1.rs  json.rs  qfic_v1.rs
fractal-images/tests/: roundtrip_errors.rs
src/: compress.rs  decompress.rs  image.rs  main.rs  model.rs  persistence.rs  preprocessing.rs  quadtree.rs  readwrite.rs  testutils.rs
src/compress/: quadtree.rs
src/image/: block.rs  downscale.rs  owned.rs  rotate.rs
src/model/: block.rs  transformation.rs
src/persistence/: json.rs
