[package]
name = "fractal-image-comp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
image = "0.25.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
derive_more = { version = "0.99.17" }
rand = "0.8.5"
rayon = "1.10.0"
log = "0.4.21"
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }