[package]
name = "fractal-image"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
itertools = "0.13.0"
image = "0.25.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
derive_more = { version = "0.99.17" }
rand = "0.8.5"
rayon = "1.10.0"
log = "0.4.21"
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
fxhash = "0.2.1"
byteorder = "1.5.0"