[package]
name = "fractal-image"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
itertools = "0.13.0"
image = "0.25.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
derive_more = { version = "0.99.17" }
rand = "0.8.5"
rayon = "1.10.0"
log = "0.4.21"
serde_json = { version = "1.0.117", optional = true }
serde = { version = "1.0.202", features = ["derive"] , optional = true }
anyhow = "1.0.86"
thiserror = "1.0.61"
fxhash = { version = "0.2.1", optional = true }
byteorder = { version = "1.5.0" , optional = true}

[dev-dependencies]
fluid = "0.4.1"

[features]
default = ["persist-as-binary-v1"]
persist-as-binary-v1 = ["dep:byteorder", "dep:fxhash"]
persist-as-json = ["dep:serde", "dep:serde_json"]